fix horizontal scroll

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 }
 .containerhome__banner__bannerText{
     position: absolute;
@@ -127,6 +128,7 @@
     align-items: center;
     position: relative;
     margin: 100px 0 140px 0;
+    overflow: hidden;
 }
 .process__text{
     position: absolute;
